versioned_docs/version-1.16.x/核心组件-重点/日志组件/日志组件.md
---
title: '日志组件'
sidebar_position: 5
hide_title: true
---

`glog` 是通用的高性能日志管理模块，实现了强大易用的日志管理功能，是 `goframe` 开发框架的核心组件之一。

## 基本介绍

**使用方式**：

```go
import "github.com/gogf/gf/os/glog"

```

**接口文档**：

[http://godoc.org/github.com/gogf/gf/os/glog](http://godoc.org/github.com/gogf/gf/os/glog)

**简要说明：**

1. `glog` 模块固定日志文件名称格式为 `*.log`，即固定使用 `.log` 作为日志文件名后缀。
2. `glog` 支持文件输出、日志级别、日志分类、调试管理、调用跟踪、链式操作、滚动切分等等丰富特性。
3. 可以使用 `glog.New` 方法创建 `glog.Logger` 对象用于自定义日志打印，也可以并推荐使用 `glog` 默认提供的包方法来打印日志。
4. 当使用包方法修改模块配置时，注意任何的 `glog.Set*` 设置方法都将会 **全局生效**。
5. 日志内容默认时间格式为 `时间 [级别] 内容 换行`，其中 `时间` 精确到毫秒级别， `级别` 为可选输出， `内容` 为调用端的参数输入， `换行` 为可选输出(部分方法自动为日志内容添加换行符号)，日志内容示例： `2018-10-10 12:00:01.568 [ERRO] 产生错误`。
6. `Print*/Debug*/Info*` 方法输出日志内容到标准输出( `stdout`)，为防止日志的错乱， `Notice*/Warning*/Error*/Critical*/Panic*/Fatal*` 方法也是将日志内容输出到标准输出( `stdout`)。
7. 其中 `Panic*` 方法在输出日志信息后会引发 `panic` 错误方法， `Fatal*` 方法在输出日志信息之后会停止进程运行，并返回进程状态码值为 `1`(正常程序退出状态码为 `0`)。

## 知识图谱

![](/markdown/c0707c26306fa68b70015a5d90acfea2.png)

## 单例对象

从 `goframe v1.9` 版本开始，提供了 `g.Log()` 单例对象，开发者可以通过给定不同的单例名称管理不同的日志单例对象。单例对象在第一次使用时会执行初始化，初始化时会自动读取配置文件中的相关日志配置。因此，如果使用单例对象，开发者都不需要自行管理日志对象的配置，一切通过配置文件管理即可，极大提高组件的维护效率。

## `glog.Print` 和 `g.Log().Print` 区别

- `glog` 是日志组件的包名， `g.Log()` 是一个日志组件单例对象。
- `g.Log()` 单例对象通过对象管理组件 `g` 包来维护，对象初始化时会自动读取日志配置，使用简便，大多数场景下推荐使用这种方式使用日志组件。
- `glog` 通过独立组件的形式使用，默认情况下会直接输出日志到终端。也可以通过配置管理方法设置全局配置，或者通过 `New` 创建独立的日志对象使用。